# phq

./: .clang-format  .clang-tidy  .gitignore  BUILD.bazel  CMakeLists.txt  Configuration.bzl  Doxyfile  Doxygen.txt  LICENSE  README.md  WORKSPACE.bazel
.github/: CODEOWNERS
.github/workflows/: build_and_test.yaml  build_and_test.yml  continuous_integration.yml  tests.yaml
doc/: Doxyfile
docs/: Doxyfile  README.md  clear.sh  footer.html  generate.sh  header.html  main.txt  style.css
include/PhQ/: Acceleration.hpp  AccelerationMagnitude.hpp  AccelerationScalar.hpp  Angle.hpp  AngularAccelerationMagnitude.hpp  AngularAccelerationScalar.hpp  AngularSpeed.hpp  Area.hpp  AreaVector.hpp  Base.hpp  BulkDynamicViscosity.hpp  ConstitutiveModel.hpp  DimensionalDyad.hpp  DimensionalDyadQuantity.hpp  DimensionalPlanarVector.hpp  DimensionalQuantity.hpp  DimensionalScalar.hpp  DimensionalScalarQuantity.hpp  DimensionalSymmetricDyad.hpp  DimensionalSymmetricDyadQuantity.hpp  DimensionalVector.hpp  DimensionalVectorQuantity.hpp  DimensionlessDyad.hpp  DimensionlessDyadQuantity.hpp  DimensionlessPlanarVector.hpp  DimensionlessQuantity.hpp  DimensionlessScalar.hpp  DimensionlessScalarQuantity.hpp  DimensionlessSymmetricDyad.hpp  DimensionlessSymmetricDyadQuantity.hpp  DimensionlessVector.hpp  DimensionlessVectorQuantity.hpp  Dimensions.hpp  Direction.hpp  Displacement.hpp  DisplacementGradient.hpp  DisplacementGradientScalar.hpp  Duration.hpp  Dyad.hpp  DynamicKinematicPressure.hpp  (+106 more)
lib/: Acceleration.hpp  AccelerationMagnitude.hpp  Angle.hpp  AngularAccelerationMagnitude.hpp  AngularSpeed.hpp  Area.hpp  AreaVector.hpp  BulkDynamicViscosity.hpp  Direction.hpp  Displacement.hpp  DisplacementGradient.hpp  Duration.hpp  DynamicKinematicPressure.hpp  DynamicPressure.hpp  DynamicViscosity.hpp  Energy.hpp  Force.hpp  ForceMagnitude.hpp  Frequency.hpp  GasConstant.hpp  HeatFlux.hpp  IsentropicBulkModulus.hpp  IsobaricHeatCapacity.hpp  IsochoricHeatCapacity.hpp  IsothermalBulkModulus.hpp  KinematicViscosity.hpp  LameFirstModulus.hpp  Length.hpp  LinearThermalExpansionCoefficient.hpp  Mass.hpp  MassDensity.hpp  MassRate.hpp  Memory.hpp  MemoryRate.hpp  PWaveModulus.hpp  PoissonRatio.hpp  Position.hpp  Power.hpp  Pressure.hpp  PressureDifference.hpp  (+33 more)
lib/Base/: Include.hpp  String.hpp  Type.hpp
lib/ConstitutiveModel/: Base.hpp  CompressibleNewtonianFluid.hpp  ElasticIsotropicSolid.hpp  IncompressibleNewtonianFluid.hpp
lib/Dimension/: Base.hpp  ElectricCurrent.hpp  Length.hpp  LuminousIntensity.hpp  Mass.hpp  Set.hpp  SubstanceAmount.hpp  Temperature.hpp  Time.hpp
lib/Quantity/: Dimensional.hpp  DimensionalDyadic.hpp  DimensionalScalar.hpp  DimensionalSymmetricDyadic.hpp  DimensionalVector.hpp  Dimensionless.hpp  DimensionlessDyadic.hpp  DimensionlessScalar.hpp  DimensionlessSymmetricDyadic.hpp
lib/StateModel/: Base.hpp  PerfectGas.hpp
lib/Test/: Conversions.cpp  Relations.cpp
lib/ThermodynamicStateModel/: Base.hpp  IdealGas.hpp  IncompressibleFluid.hpp  PerfectGas.hpp
lib/Unit/: Acceleration.hpp  Angle.hpp  AngularAcceleration.hpp  AngularSpeed.hpp  Area.hpp  Base.hpp  Diffusivity.hpp  DynamicViscosity.hpp  Energy.hpp  EnergyFlux.hpp  Force.hpp  Frequency.hpp  HeatCapacity.hpp  Length.hpp  Mass.hpp  MassDensity.hpp  MassRate.hpp  Memory.hpp  MemoryRate.hpp  Power.hpp  Pressure.hpp  SpecificEnergy.hpp  SpecificHeatCapacity.hpp  SpecificPower.hpp  Speed.hpp  Temperature.hpp  TemperatureDifference.hpp  TemperatureGradient.hpp  ThermalConductivity.hpp  Time.hpp  Volume.hpp  VolumeRate.hpp
lib/Value/: Dyadic.hpp  SymmetricDyadic.hpp  Vector.hpp
source/: Angle.hpp  Area.hpp  Base.hpp  Direction.hpp  DisplacementGradient.hpp  Dyad.hpp  Force.hpp  Main.cpp  Position.hpp  Pressure.hpp  ReynoldsNumber.hpp  Stress.hpp  SymmetricDyad.hpp  SymmetricDyadic.hpp  System.hpp  Temperature.hpp  Time.hpp  Vector.hpp  Volume.hpp
source/Base/: Include.hpp
source/Dimension/: Base.hpp  LuminousIntensity.hpp  Mass.hpp  Set.hpp  Time.hpp
source/Quantity/: Base.hpp  Dimensional.hpp  DimensionalScalar.hpp  DimensionalSymmetricDyadic.hpp  DimensionalVector.hpp  DimensionlessDyadic.hpp  DimensionlessSymmetricDyadic.hpp  Direction.hpp
source/Unit/: Angle.hpp  Area.hpp  Base.hpp  Force.hpp  Length.hpp  Mass.hpp  Pressure.hpp  Relation.hpp  Temperature.hpp  Time.hpp  Volume.hpp
source/Value/: CartesianVector.hpp  Dyadic.hpp  SymmetricCartesianDyad.hpp  SymmetricDyadic.hpp  Vector.hpp
test/: Acceleration.cpp  AccelerationMagnitude.cpp  AccelerationScalar.cpp  Angle.cpp  AngularAccelerationMagnitude.cpp  AngularAccelerationScalar.cpp  AngularSpeed.cpp  Area.cpp  AreaVector.cpp  Base.cpp  BulkDynamicViscosity.cpp  ConstitutiveModels.cpp  Conversions.cpp  DimensionalDyad.cpp  DimensionalScalar.cpp  DimensionalSymmetricDyad.cpp  DimensionalVector.cpp  DimensionlessDyad.cpp  DimensionlessScalar.cpp  DimensionlessSymmetricDyad.cpp  DimensionlessVector.cpp  Dimensions.cpp  Direction.cpp  Displacement.cpp  DisplacementGradient.cpp  DisplacementGradientScalar.cpp  Duration.cpp  Dyad.cpp  DynamicKinematicPressure.cpp  DynamicPressure.cpp  DynamicViscosity.cpp  ElectricCharge.cpp  ElectricCurrent.cpp  Energy.cpp  Force.cpp  ForceMagnitude.cpp  ForceScalar.cpp  Frequency.cpp  GasConstant.cpp  HeatCapacityRatio.cpp  (+99 more)
test/Base/: Constant.cpp  Constants.cpp  Math.cpp  Precision.cpp  SquareRoot.cpp  String.cpp
test/ConstitutiveModel/: CompressibleNewtonianFluid.cpp  ElasticIsotropicSolid.cpp  IncompressibleNewtonianFluid.cpp
test/Dimension/: ElectricCurrent.cpp  Length.cpp  LuminousIntensity.cpp  Mass.cpp  Set.cpp  SubstanceAmount.cpp  Temperature.cpp  Time.cpp
test/Unit/: Acceleration.cpp  Angle.cpp  AngularAcceleration.cpp  AngularSpeed.cpp  Area.cpp  Base.hpp  Diffusivity.cpp  Dimensionless.cpp  DynamicViscosity.cpp  ElectricCharge.cpp  ElectricCurrent.cpp  Energy.cpp  EnergyFlux.cpp  Force.cpp  Frequency.cpp  HeatCapacity.cpp  Length.cpp  Mass.cpp  MassDensity.cpp  MassRate.cpp  Memory.cpp  MemoryRate.cpp  Power.cpp  Pressure.cpp  ReciprocalTemperature.cpp  SolidAngle.cpp  SpecificEnergy.cpp  SpecificPower.cpp  (+12 more)
(+109 files in other folders)
