# Copyright © 2020-2024 Alexandre Coderre-Chabot
#
# This file is part of Physical Quantities (PhQ), a C++ library of physical quantities, physical
# models, and units of measure for scientific computation.
#
# Physical Quantities (PhQ) is hosted at:
#     https://github.com/acodcha/physical-quantities
#
# Physical Quantities (PhQ) is licensed under the MIT License:
#     https://mit-license.org
#
# Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
# associated documentation files (the "Software"), to deal in the Software without restriction,
# including without limitation the rights to use, copy, modify, merge, publish, distribute,
# sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all copies or
# substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
# NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
# DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM OUT
# OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

load("//:Configuration.bzl", "phq_library", "phq_test")

phq_library(
  name = "Base",
  hdrs = ["include/PhQ/Base.hpp"],
)

phq_test(
  name = "test/Base",
  srcs = ["test/Base.cpp"],
  deps = [":Base"],
)

phq_library(
  name = "Dimension/ElectricCurrent",
  hdrs = ["include/PhQ/Dimension/ElectricCurrent.hpp"],
  deps = [":Base"],
)

phq_test(
  name = "test/Dimension/ElectricCurrent",
  srcs = ["test/Dimension/ElectricCurrent.cpp"],
  deps = [":Dimension/ElectricCurrent"],
)
